[package]
name = "wcam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"

[dependencies]
v4l = {version = "^0.13.0" }
jpeg-decoder = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
